@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR_T4
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #ff8a9b
show members
hide empty members

class NameContainsKeywordsScoredPredicate {
  - keywords: List<String>
  - toScore(...): Score
  + computeScore(...): Score
  + createPersonComparator(...): Comparator<Person>
}

class FindRelevance {
  + {static} SCORE_COMPARATOR: Comparator<Score>
}

enum MatchTier <<enumeration>> {
  EXACT_TOKEN
  PREFIX_TOKEN
  SUBSTRING_TOKEN
  NO_MATCH
}

class Score {
  + tier: MatchTier
  + unmatchedCharCount: int
  + sortKey: String
}

FindRelevance --> MatchTier
FindRelevance --> Score
NameContainsKeywordsScoredPredicate ..> FindRelevance

@enduml
